# research-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  writing_a_paper.md
examples/: quickstart.py
examples/demo_paper/sections/: abstract.txt  introduction.txt  methods.txt
research_agent/: __init__.py  config.py  docx_builder.py  feedback.py  figures.py  metrics.py  review_criteria.py  utils.py  workflow.py
templates/: paper_workflow.json
